<resources>
    <string name="app_name">Baking Time</string>

    <!-- Default recipe strings -->
    <string name="recipe_unknown_measure">Unspecified</string>
    <string name="recipe_unknown_ingredient">Not described</string>
    <string name="recipe_step_short_description_missing">No short description</string>
    <string name="recipe_step_description_missing">No description</string>
    <string name="recipe_ingredients_header">Ingredients</string>
    <string name="recipe_steps_header">Steps</string>

    <string name="step_previous_label">Previous</string>
    <string name="step_next_label">Next</string>

    <string name="video_not_available">No video available</string>
    <string name="appwidget_name">Not selected</string>
    <string name="configure">Select a recipe</string>
    <string name="add_widget">Add widget</string>
</resources>
